fix: messaga align

--- a/src/components/message2/message.scss
+++ b/src/components/message2/message.scss
@@ -33,7 +33,7 @@ $messageDistance: 4PX;
 
   &__align {
     width: 100%;
-    max-width: 700px;
+    max-width: 740px;
     padding: ($messageDistance / 2) 20px;
     display: flex;
     justify-content: flex-start;
